# VelocitySystems

./: .gitignore  ARCHITECTURE.md  FULFILLMENT_GAP_REPORT.md  README.md  README_ENGINE.md  SYSTEM_OVERVIEW.md  THE_FORGE_DOCTRINE.md  package-lock.json
REFORGE-OS-3.0.0/: .gitignore  ARCHITECTURE_ANALYSIS.md  BUILD_COMPLETE.md  BUNDLED_PYTHON_ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE_INFRASTRUCTURE_MAP.md  COMPLETE_SYSTEM_OVERVIEW.md  CONTRIBUTING.md  CURRENT_STATUS_ACCURATE.md  CURSOR_RULES.md  CUSTODIAL_CLOSET_SOLUTIONS.md  Cargo.toml  EXECUTIVE_SUMMARY.md  EXPANDED_SCOPE_ROADMAP.md  FINAL_IMPLEMENTATION_CHECKLIST.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_POLISH_COMPLETE.md  FRONTEND_BACKEND_NODES_MAP.md  GITHUB_REPOSITORY_INFO.md  IMPLEMENTATION_STATUS.md  LAUNCH_CHECKLIST.md  LEGITIMATE_IMPLEMENTATION_GUIDE.md  LICENSE  MASTER_IMPLEMENTATION_PLAN.md  MONOREPO_STRUCTURE.md  NODES_MODULES_COMPLETE_MAP.md  PROFESSIONAL_THEME_APPLIED.md  PROFESSIONAL_THEME_COMPLETE.md  QUICKSTART.md  QUICK_FIX_WHITE_SCREEN.md  README.md  README_BACKEND.md  README_LAYER_1_WORKSHOP.md  README_LAYER_2_FORGEWORKS.md  README_LAYER_3_PANDORA.md  REFORGE_OS_FOCUS.md  REFORGE_OS_MISSION.md  REFORGE_OS_STATUS.md  RELEASE_PREPARATION.md  (+14 more)
REFORGE-OS-3.0.0/.github/workflows/: ci.yml  compliance-guard.yml  release.yml
REFORGE-OS-3.0.0/Bobbys-Workshop--3.0.0/: .env.example  .eslintrc.strict.js  .gitattributes  .gitignore  23-POLISH-COMPLETE-SUMMARY.md  23-POLISH-PASSES.md  ADB_AUTHORIZATION_TRIGGER.md  ADB_FASTBOOT_DETECTION.md  AGENTS.md  ALL-23-POLISH-PASSES-COMPLETE.md  ALL_ENDPOINTS_IMPLEMENTED.md  API_HARDENING_COMPLETE.md  API_HARDENING_IMPLEMENTATION_PLAN.md  API_HARDENING_STATUS.md  API_INTEGRATION.md  API_MIGRATION_STATUS.md  AUDIT_SUMMARY.md  AUTHORIZATION_HISTORY_TRACKING.md  AUTHORIZATION_TRIGGERS_API.md  AUTHORIZATION_TRIGGERS_COMPLETE.md  AUTHORIZATION_TRIGGERS_IMPLEMENTATION.md  AUTHORIZATION_TRIGGERS_LIVE_INTEGRATION.md  AUTOMATED_TESTING.md  AUTOMATED_TESTING_PIPELINE.md  BACKEND_API_IMPLEMENTATION.md  BACKEND_AUTHORIZATION_API_GUIDE.md  BACKEND_SETUP.md  BATCH_DIAGNOSTICS_INTEGRATION.md  BATCH_FLASHING.md  BENCHMARKING_QUICKSTART.md  BOBBYS_SECRET_ROOMS.md  BOBBY_DEV_ARSENAL.md  BOBBY_SECRET_WORKSHOP.md  BOOTFORGEUSB_API.md  BOOTFORGEUSB_BACKEND_WIRING.md  BOOTFORGEUSB_REAL_CONNECTION.md  BOOTFORGEUSB_REAL_SCANNING.md  BOOTFORGEUSB_V02_INTEGRATION.md  BOOTFORGE_USB_INTEGRATION_COMPLETE.md  BOOTFORGE_USB_INTEGRATION_MANUAL.md  (+206 more)
REFORGE-OS-3.0.0/Bobbys-Workshop--3.0.0/.github/: AGENTS.md  AI_OPERATING_SYSTEM.md  BRANCH_PROTECTION.md  MACOS_IMPLEMENTATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
REFORGE-OS-3.0.0/Bobbys-Workshop--3.0.0/.pandora_private/: README.md
REFORGE-OS-3.0.0/REFORGE_MDM/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md
REFORGE-OS-3.0.0/api/: forgeworks_api.py  main.py  requirements.txt  trapdoor_api.py
REFORGE-OS-3.0.0/audit/: __init__.py  logger.py  viewer.py
REFORGE-OS-3.0.0/bobby_dev_mode/: __init__.py  adb_utils.py  api_cli.py  cli.py
REFORGE-OS-3.0.0/bootforge/: __init__.py  core.py  drives.py  imager.py
REFORGE-OS-3.0.0/cases/: README.md  __init__.py  manager.py
REFORGE-OS-3.0.0/crm/: __init__.py  manager.py
REFORGE-OS-3.0.0/device_detection/: __init__.py  detector.py
REFORGE-OS-3.0.0/diagnostics/: __init__.py  adb_diagnostics.py  report_generator.py  workflow.py
REFORGE-OS-3.0.0/docs/: ARCHITECTURE.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BUG_VERIFICATION_RESULTS.md  COMPLETE_GUI_IMPLEMENTATION.md  COMPLETE_TOOL_ECOSYSTEM_IMPLEMENTATION.md  DEVELOPMENT.md  ENTERPRISE_UPGRADE_SUMMARY.md  FEATURES_MODULES_STATUS.md  FILE_REVIEW_APPROVAL.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS_UPDATE.md  MASTER_INTEGRATION_PLAN.md  MIGRATION_GUIDE.md  MISSING_GUI_FEATURES.md  QUICK_REFERENCE.md  SECURITY.md  THEME_CONSISTENCY_PROGRESS.md  UNIFIED_ARCHITECTURE.md  api-contracts.yaml  app-store-review-notes.md  complete-tool-list-framing.md  compliance-disclaimers.md  frontend-backend-integration.md  frontend-backend-nodes-map.md  glossary-tool-agnostic.md  regulator-qa-appendix.md  ui-microcopy-library.md  ui-navigation-labels.md  windows-installer-review-notes.md
REFORGE-OS-3.0.0/engine/: CMakeLists.txt  README.md  main.cpp
REFORGE-OS-3.0.0/history/: __init__.py  manager.py
REFORGE-OS-3.0.0/ops/: incident-response.md  release-checklist.md
REFORGE-OS-3.0.0/phoenix/: __init__.py  device_info.py  registry.py  router.py  verifier.py
REFORGE-OS-3.0.0/phoenix_key/: COMPLETE_SYSTEM.md  README.md  __init__.py
REFORGE-OS-3.0.0/policy_gates/: __init__.py  gates.py
REFORGE-OS-3.0.0/python/: README.md  requirements.txt
REFORGE-OS-3.0.0/recovery/: __init__.py  evidence_bundles.py  firmware_lookup.py  recovery_guidance.py
REFORGE-OS-3.0.0/reports/: __init__.py  pdf_export.py
REFORGE-OS-3.0.0/services/: Cargo.toml
REFORGE-OS-3.0.0/solutions/: __init__.py  database.py
REFORGE-OS-3.0.0/storage/: .gitkeep
engine/: BUILD_CHECKLIST.md  BUILD_INSTRUCTIONS.md  BUILD_PHASE2.md  BUILD_PHASE3.md  CMakeLists.txt  KAIJAX_ABILITIES.md  KAIJAX_CHARACTERS.md  KAIJAX_QUICKSTART.md  KAIJAX_STATUS.md  PHASE1_STATUS.md  PHASE2_STATUS.md  PHASE3_STATUS.md  PHASE4_STATUS.md  PHASE5_6_7_STATUS.md  README_PHASE2.md  README_PHASE3.md  README_PHASE4.md  README_PHASE5_6_7.md  STATUS.md
engine/core/: buffer.cpp  buffer.h  camera.h  character.cpp  character.h  character_abilities.cpp  character_abilities.h  character_roster.cpp  character_roster.h  depth_buffer.cpp  depth_buffer.h  descriptor_set.cpp  descriptor_set.h  engine_main.cpp  gpu_driven.cpp  gpu_driven.h  instancing.cpp  instancing.h  job_system.cpp  job_system.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h  physics_sync.cpp  physics_sync.h  pipeline.cpp  pipeline.h  profiler.cpp  profiler.h  render_graph.cpp  render_graph.h  render_pass.cpp  render_pass.h  shader.cpp  shader.h  stubs.h  texture.cpp  (+7 more)
engine/shaders/: textured.frag  textured.vert  triangle.frag.spv  triangle.vert.spv
engine/tools/: compile_shaders.py
(+1140 files in other folders)
