[workspace]
resolver = "2"

members = [
    "services/device-analysis",
    "services/ownership-verification",
    "services/legal-classification",
    "services/audit-logging",
    "services/authority-routing",
    "services/auth",
    "services/metrics",
    "services/capability-awareness",
    "services/py-worker",
]

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = ["BootForge Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bboy9090/Bootforge-usb"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
sha2 = "0.10"
