[package]
name = "forgeworks-core"
version = "0.1.0"
edition = "2021"

[dependencies]
device-analysis = { path = "../device-analysis" }
ownership-verification = { path = "../ownership-verification" }
legal-classification = { path = "../legal-classification" }
audit-logging = { path = "../audit-logging" }
authority-routing = { path = "../authority-routing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
