[package]
name = "bobby-dev-panel"
version = "1.0.0"
description = "Bobby Dev Panel - Enterprise Device Diagnostics & Control"
authors = ["Bobby's Workshop"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-execute", "dialog-all", "fs-all", "notification-all", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
