[package]
name = "workshop-ui"
version = "3.0.0"
description = "REFORGE OS - Professional Repair Platform"
authors = ["BootForge Contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# Binary name is handled by Tauri (tauri.conf.json productName)
# No explicit [[bin]] needed - Cargo will use package name

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "1.5", features = [ "shell-open", "dialog-save", "dialog-open"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
