[package]
name = "trapdoor-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trapdoor_cli"
path = "src/main.rs"

[dependencies]
libbootforge = { path = "../libbootforge" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
